@@ -1,1 +1,1 @@
-DIST fastqc_v0.10.1_source.zip 605722 SHA256 5e7a731c9a21c6b50604db8bb43396e772a7665219ab03a5574a662c24169b88 SHA512 e344043fe9faeb02136d5df2827a1e9609752eb95f5a4b6bc4ac42f5110eb06d3ed74de5b3a2973ba6f17f79f7bb0299c2f754bcace00d8faf6ad549a3245358 WHIRLPOOL ee18a410fed681ff0a6a855f5a56fdab5417f11f59b43d1b47590e5ad40e17e7909aa25388b547379b44775560e94afa4f9890a546e5ab1836b14cdadba3dfc3
+DIST fastqc_v0.11.2_source.zip 996798 SHA256 efee48358830f5120b5a39311d5f50352b1476e89bf5ea4ad6ce1ab831ee7eee SHA512 c0443d7b8313b488090832c7697662d6fccbe8bddf42d7941bb8a3f50e55c104cfa06e2edbd0e04c5fc5de02eadd61830ceddf2c944228a1ce9479d846a750b3 WHIRLPOOL 2aeae03c18595a7a56b88f353b2490d7a826aa7130451e3fc05faf111c1aeea67f5ea617225cedc1d11172ee5c3f823b1f0793278ef5910b8bec00468de76ce9
